--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Work Order Approval Dashboard" />
+    <meta name="author" content="Data Approval Board" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>data-approval-board</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="data-approval-board" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Work Order Approval Dashboard" />
+    <meta property="og:description" content="Efficient work order management and approval system" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:image" content="/vite.svg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Work Order Approval Dashboard" />
+    <meta name="twitter:image" content="/vite.svg" />
+    <title>Work Order Approval Dashboard</title>
   </head>
 
   <body>
